# cavalier

./: README.md
.github/workflows/: backend-dockerimage.yml  frontend-dockerimage.yml  trunk-dockerimage.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Cargo.toml  Dockerfile  index.html  index.js  nginx.conf
frontend/assets/: style.scss
frontend/src/: main.rs
frontend/trunk/: Dockerfile
