[package]
name = "cavalier-backend"
description = "extralive chat"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
homepage = "cavalier.samfield.net"
categories = ["web-programming::websocket", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
bytes = { version = "1.10.1", features = ["serde"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower-sessions = "0.14.0"

[profile.release]
opt-level = 3
